--- a/public/css/dark-2026.css
+++ b/public/css/dark-2026.css
@@ -105,7 +105,7 @@ html.theme-dk-gold {
   --bg-opacity-brighter: rgba(161, 131, 35, 0.2);
 }
 
-html.theme-dk-purple {
+.theme-dk-purple {
   --primary: #7e22ce;
   --fa-main-color: #7e22ce;
   --primary-light: #9c4ce1;
