--- a/public/css/dark-2026.css
+++ b/public/css/dark-2026.css
@@ -726,6 +726,33 @@ body:has(#body-kkl) .settings-mobile-wrap {
   border: 1px solid rgba(255, 255, 255, 0.08);
 }
 
+body:has(#body-kkl) a,
+body:has(#body-kkl) .oddtablerow,
+body:has(#body-kkl) .eventablerow {
+  transition: all 0.2s ease;
+}
+body:has(#body-kkl) .oddtablerow:hover,
+body:has(#body-kkl) .eventablerow:hover {
+  background: rgba(255, 255, 255, 0.05);
+}
+
+body:has(#body-kkl) caption {
+  text-shadow: 0 0 8px var(--primary-light), 0.5px 0.5px rgb(212, 212, 212);
+}
+
+body:has(#body-kkl) .mobile-wrap,
+body:has(#body-kkl) .settings-mobile-wrap {
+  border-radius: 0.5rem;
+}
+
+body:has(#body-kkl) .banner-container {
+  border-bottom: none;
+  background-image: linear-gradient(var(--bg-opacity), var(--bg-opacity)),
+    linear-gradient(90deg, var(--primary-dark), var(--primary-light), var(--primary-dark));
+  background-clip: padding-box, border-box;
+  background-origin: padding-box, border-box;
+  border-bottom: 3px solid transparent;
+}
 
 body:has(#body-kdl) {
   background-image: url(https://mfl-leagues.com/images/league/kdl/side-particles.png), url(https://mfl-leagues.com/images/shared/dark-grunge.jpg);
